2012-05-06  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2012-04-27  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/52999
	* config/pa/pa.c (pa_legitimate_constant_p): Don't put function labels
	in constant pool.

2012-05-04  Ian Lance Taylor  <iant@google.com>

	* tree-vect-patterns.c (vect_single_imm_use): Correct return
	values from false to NULL.

2012-05-04  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2012-05-04  Uros Bizjak  <ubizjak@gmail.com>

	PR target/53228
	* config/i386/i386.h (X86_ARCH_CMOV): Rename from X86_ARCH_CMOVE.
	(TARGET_CMOV): Rename from TARGET_CMOVE.
	(TARGET_CMOVE): New define.
	* config/i386/i386.c (ix86_option_override_internal): Use TARGET_CMOV.
	Do not set TARGET_CMOVE here.

2012-05-04  Ulrich Weigand  <ulrich.weigand@linaro.org>

	Backport from mainline:

	2012-05-04  Ulrich Weigand  <ulrich.weigand@linaro.org>

	PR tree-optimization/52633
	* tree-vect-patterns.c (vect_vect_recog_func_ptrs): Swap order of
	vect_recog_widen_shift_pattern and vect_recog_over_widening_pattern.
	(vect_recog_over_widening_pattern): Remove handling of code that was
	already detected as over-widening pattern.  Remove special handling
	of "unsigned" cases.  Instead, support general case of conversion
	of the shift result to another type.

	2012-05-04  Ulrich Weigand  <ulrich.weigand@linaro.org>

	* tree-vect-patterns.c (vect_single_imm_use): New function.
	(vect_recog_widen_mult_pattern): Use it instead of open-coding loop.
	(vect_recog_over_widening_pattern): Likewise.
	(vect_recog_widen_shift_pattern): Likewise.

	2012-04-10  Ulrich Weigand  <ulrich.weigand@linaro.org>

	PR tree-optimization/52870
	* tree-vect-patterns.c (vect_recog_widen_mult_pattern): Verify that
	presumed pattern statement is within the same loop or basic block.

2012-05-04  Richard Guenther  <rguenther@suse.de>

	* common.opt (flto-report): Do not mark as Optimization.

2012-05-04  Eric Botcazou  <ebotcazou@adacore.com>
